--- a/products/src/App.css
+++ b/products/src/App.css
@@ -1,30 +1,47 @@
 .main{
   height: calc(100vh);
-  background-color: aqua;
 }
 .nav{
-  height: 80px;
-  background-color: black;
+  height: 70px;
+  background-color: rgb(41, 41, 41);
   color: white;
 }
-.body-div{
+/* .body-div{
   background-color: yellow;
-}
+} */
 .form-div{
   display: flex;
-  background-color: green;
   justify-content: center;
   align-items: center;
+  
 }
 .theForm{
   display: flex;
-  border: 1px solid black;
+  box-shadow: 0px 0px 15px black;
+  padding: 10px;
+  margin: 20px 0px 20px 0px;
+  height: 300px;
+  border-radius: 5px;
 }
 .theForm>form, .form-row{
   display: flex;
   flex-direction: column;
 }
+.theForm>form{
+  justify-content: space-around;
+}
+
 .products-container{
-  height: 300px;
-  overflow: scroll;
+  height: 245px;
+  overflow-y: scroll;
+}
+.form-row>input{
+  width: 400px;
+  padding: 2px 5px;
+}
+.form-row>span{
+  color: red;
+  font-size: 0.8em;
+  max-width: 400px;
+  overflow-wrap: break-word;
 }
