--- a/products/src/App.css
+++ b/products/src/App.css
@@ -2,9 +2,13 @@
   height: calc(100vh);
 }
 .nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 70px;
   background-color: rgb(41, 41, 41);
   color: white;
+  font-size: 1.5em;
 }
 /* .body-div{
   background-color: yellow;
