--- a/products/src/App.css
+++ b/products/src/App.css
@@ -10,9 +10,6 @@
   color: white;
   font-size: 1.5em;
 }
-/* .body-div{
-  background-color: yellow;
-} */
 .form-div{
   display: flex;
   justify-content: center;
@@ -51,5 +48,18 @@
 }
 .error-span{
   color: red;
-  font-size: 0.8em;
+  font-size: 0.7em;
+}
+.products-container::-webkit-scrollbar{
+  width: 10px;
+}
+.products-container::-webkit-scrollbar-thumb{
+  background-color: rgb(28, 27, 27);
+  border-radius: 10px;
+}
+.products-container::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(108, 107, 107);
+}
+.products-container::-webkit-scrollbar-track{
+  background-color: transparent;
 }
